# KB_busy_tally_data_pipeline

./: .gitignore  MySqlBackup.bat  Untitled.ipynb  github_kb  github_kb.pub  logging_config.py  main.py  pyproject.toml  result.xlsx  run_script.bat  test.py
MySQL_Backups/: backup_log.txt
Reports/: reports.py  sales_price_validation.py  salesman_order_validation.py
busy/: Old Sales return Busy.xlsx  Pricing Bio.xlsx  busy_utils.py  email_busy_reports.py  export_busy_reports.py  main_busy.py  rep1.py  test_rep1.py
busy/images/: Sales Summary Comprehensive Report (2024-09-26 to 2024-10-25).xlsx  j.bat
database/: busy_data_processor.py  db_crud.py  db_import.py  excel_cleanup.py  main_db.py  main_sql.py  models.py  sql_connector.py  tally_data_processor.py  test_import.py
database/models/: base.py  busy_models.py
database/models/busy_models/: busy_accounts.py  busy_accounts_rm.py  busy_item_rm.py  busy_items.py  busy_items_models.py  busy_pricing.py  busy_reports.py  busy_reports_models.py  busy_reports_rm.py
database/models/kbe_models/: export_models.py  tally_kbe_models.py
database/models/tally_models/: tally_report_models.py
database/tests/: test_sql_connector.py  tests_apply_transformation.py  tests_db_crud.py  tests_excel_cleanup.py  tests_tables.py
main_reports/: reports.py
reports/: sales_price_validation_rep.py
tally/: main_tally.py  tally_pyautogui.py  tally_utils.py
tests/: test_rep1.py
trackwick/: api_data.py  main_trackwick.py
trackwick/api/: api_config.py
utils/: busy_utils.py  common_utils.py  email.py  mysql_backup.sh  utils.py
(+10 files in other folders)
